fixed call to action spacing

--- a/final/css/large.css
+++ b/final/css/large.css
@@ -37,7 +37,7 @@
         display: flex;
     }
 
-    .call_to_act div * {
+    .call_to_act div :first-child {
         margin-right: 15px;
     }
 
