--- a/final/css/small.css
+++ b/final/css/small.css
@@ -151,7 +151,7 @@ nav {
 }
 
 .call_to_rent h1 {
-    font-size: 18px;
+    font-size: 17px;
 }
 
 .call_to_rent a{
